--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,11 +10,13 @@ dependencies:
   flutter:
     sdk: flutter
   shared_preferences: ^2.0.13
+  hive: ^2.0.4
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^3.0.0
+
 
 flutter:
   uses-material-design: true
